--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "cors": "^2.8.5",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^8.3.1",
+    "interweave": "^13.0.0",
     "jquery": "^3.6.0",
     "jquery-validation": "^1.19.3",
     "material-table": "^1.69.3",
@@ -23,6 +26,7 @@
     "react-chartjs-2": "^4.0.1",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-flip-move": "^3.0.4",
     "react-images-upload": "^1.2.8",
     "react-multiple-image-uploader": "^1.0.3",
