--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "cors": "^2.8.5",
