--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-alert": "^7.0.3",
     "react-alice-carousel": "^2.5.1",
     "react-chartjs-2": "^4.0.1",
+    "react-confirm-alert": "^2.8.0",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
