--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-flip-move": "^3.0.4",
     "react-images-upload": "^1.2.8",
     "react-multiple-image-uploader": "^1.0.3",
+    "react-native-input-spinner": "^1.7.12",
     "react-notifications-component": "^3.3.11",
     "react-preloaders": "^3.0.3",
     "react-radio-buttons": "^1.2.2",
