--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "draftjs-to-html": "^0.9.1",
     "firebase": "^8.3.1",
     "fslightbox-react": "^1.6.2-2",
+    "immutable": "^4.0.0",
     "interweave": "^13.0.0",
     "jquery": "^3.6.0",
     "jquery-validation": "^1.19.3",
