--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-flip-move": "^3.0.4",
+    "react-google-places-autocomplete": "^3.3.4",
     "react-images-upload": "^1.2.8",
     "react-multiple-image-uploader": "^1.0.3",
     "react-native-input-spinner": "^1.7.12",
