--- a/package.json
+++ b/package.json
@@ -3,19 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@danielkalen/browserify-zlib": "^0.1.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
+    "@progress/kendo-data-query": "^1.5.6",
+    "@progress/kendo-drawing": "^1.16.3",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-animation": "^5.2.0",
+    "@progress/kendo-react-buttons": "^5.2.0",
+    "@progress/kendo-react-data-tools": "^5.2.0",
+    "@progress/kendo-react-dateinputs": "^5.2.0",
+    "@progress/kendo-react-dropdowns": "^5.2.0",
+    "@progress/kendo-react-grid": "^5.2.0",
+    "@progress/kendo-react-inputs": "^5.2.0",
+    "@progress/kendo-react-intl": "^5.2.0",
+    "@progress/kendo-react-pdf": "^5.2.0",
+    "@progress/kendo-react-treeview": "^5.2.0",
+    "@progress/kendo-theme-default": "^5.4.0",
+    "@react-pdf/renderer": "^2.1.1",
+    "@react-pdf/zlib": "^2.0.0",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^0.25.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "chart.js": "^3.7.0",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "firebase": "^8.3.1",
@@ -26,6 +47,7 @@
     "jquery-validation": "^1.19.3",
     "material-table": "^1.69.3",
     "mdbreact": "^5.2.0",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alice-carousel": "^2.5.1",
@@ -47,8 +69,13 @@
     "react-scripts": "5.0.0",
     "react-spinners-kit": "^1.9.1",
     "react-table": "^7.7.0",
+    "react-to-pdf": "^0.0.14",
     "react-top-loading-bar": "^2.1.0",
+    "react-zlib-js": "^1.0.4",
     "reactjs-alert": "^1.2.7",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
