--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@progress/kendo-react-pdf": "^5.2.0",
     "@progress/kendo-react-treeview": "^5.2.0",
     "@progress/kendo-theme-default": "^5.4.0",
+    "@react-google-maps/api": "^2.10.2",
     "@react-pdf/renderer": "^2.1.1",
     "@react-pdf/zlib": "^2.0.0",
     "@stripe/react-stripe-js": "^1.7.2",
@@ -41,6 +42,7 @@
     "draftjs-to-html": "^0.9.1",
     "firebase": "^8.3.1",
     "fslightbox-react": "^1.6.2-2",
+    "geolib": "^3.3.3",
     "immutable": "^4.0.0",
     "interweave": "^13.0.0",
     "jquery": "^3.6.0",
